# Linux-Emulator

./: README.md
src/: CMakeLists.txt  command.hpp  emulator.cpp  emulator.hpp  emuliator.cpp  emuliator.hpp  file.cpp  file.hpp  filesystem.hpp  folder.cpp  folder.hpp  key.txt  main.cpp  qusetion.hpp  result.cpp  result.hpp  scenario.cpp  scenario.hpp  state.hpp  user.hpp
src/Commands/: adduser.cpp  adduser.hpp  cd.cpp  cd.hpp  deluser.cpp  deluser.hpp  mkdir.cpp  mkdir.hpp  pwd.cpp  pwd.hpp  rm.cpp  rm.hpp  su.cpp  su.hpp
src/Cube-Encription/: README.md
src/Cube-Encription/src/: a.out  encryption.cpp  encryption.hpp  key.txt  main  main.cpp
src/include/: icludeCommands.hpp
